feat: Add Reaktoro property package for IDAES, including new parameter and state blocks, supporting tests, and dependency updates.

--- a/src/test_agents_notebook.ipynb
+++ b/src/test_agents_notebook.ipynb
@@ -11,21 +11,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "3f2393f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Colab setup failed: mount failed\n",
+      "Added local paths.\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sep_agents'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipython-input-1472192621.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Added local paths.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msep_agents\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0morchestrator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0morchestrator_agent\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mOrchestratorAgent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mGeoH2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mQ_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sep_agents'",
+      "",
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the required modules\n",
     "import sys\n",
     "import os\n",
     "\n",
-    "# Add the source directories to the path\n",
-    "sys.path.append(\"/Users/davidtew/Library/CloudStorage/GoogleDrive-davetew@step-function.com/My Drive/Github/Separation-Agents/src\")\n",
-    "sys.path.append(\"/Users/davidtew/Library/CloudStorage/GoogleDrive-davetew@step-function.com/My Drive/Github/GeoH2\")\n",
+    "setup_done = False\n",
+    "try:\n",
+    "    from google.colab import drive\n",
+    "    # Check if we are really in Colab to avoid local mount attempts\n",
+    "    # COLAB_RELEASE_TAG is standard in Colab environments\n",
+    "    if os.environ.get('COLAB_RELEASE_TAG') or os.path.exists('/content/sample_data'):\n",
+    "        drive.mount('/content/drive')\n",
+    "        # Google Colab Paths\n",
+    "        sys.path.append(\"/content/drive/My Drive/Github/Separation-Agents/src\")\n",
+    "        sys.path.append(\"/content/drive/My Drive/Github/GeoH2\")\n",
+    "        print(\"Mounted Google Drive and added Colab paths.\")\n",
+    "        setup_done = True\n",
+    "    else:\n",
+    "        print(\"Not running in Colab (env check failed).\")\n",
+    "except ImportError:\n",
+    "    pass\n",
+    "except Exception as e:\n",
+    "    print(f\"Colab setup failed: {e}\")\n",
+    "\n",
+    "if not setup_done:\n",
+    "    # Local Paths\n",
+    "    sys.path.append(\"/Users/davidtew/Library/CloudStorage/GoogleDrive-davetew@step-function.com/My Drive/Github/Separation-Agents/src\")\n",
+    "    sys.path.append(\"/Users/davidtew/Library/CloudStorage/GoogleDrive-davetew@step-function.com/My Drive/Github/GeoH2\")\n",
+    "    print(\"Added local paths.\")\n",
     "\n",
     "from sep_agents.orchestrator.orchestrator_agent import OrchestratorAgent\n",
     "from GeoH2 import Q_\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "68456f55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/content\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
    ]
   },
   {
@@ -142,15 +203,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.12.12"
   }
  },
